data/derived/fa15/progs/unify/prog0555.ml.out
Characters 56-66:
  | h::t -> catLists t;;
            ^^^^^^^^^^
Error: This expression has type 'a -> 'b list
       but an expression was expected of type 'b list
